<resources>
    <string name="app_name">Contatos de Emergência</string>
    <string name="bem_vindo">Bem Vindo</string>
    <string name="entrar">Entrar</string>
    <string name="novo">Novo</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="novo_usu_rio">Novo Usuário</string>
    <string name="manter_logado">Manter Logado?</string>
    <string name="tema_escuro">Tema escuro?</string>
    <string name="n_o">Não</string>
    <string name="sim">Sim</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="criar">Criar</string>
    <string name="usu_rio">Usuário</string>
    <string name="no">Não</string>
    <string name="modificar">Modificar</string>
    <string name="alterar_dados">Alterar Dados</string>
    <string name="seus_contatos">Seus contacts?</string>
    <string name="buscar">Buscar</string>
    <string name="lupa">Lupa</string>
    <string name="adicionar">Adicionar</string>
    <string name="ligar">Ligar</string>
</resources>